# imessage-query

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: test.yml
src/: apple.rs  client.rs  main.rs  split.rs
