[package]
name = "imessage-query"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.3.8", features = ["derive"] }
dirs = "5.0.1"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
