[package]
name = "imessage-query"
version = "0.1.1"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
derive_more = "0.99.17"
dirs = "5.0.1"
ron = "0.8.1"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
colored = "2.0.4"
once_cell = "1.18.0"
regex = "1.10.2"
