[package]
name = "imessage-query"
version = "0.1.1"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
dirs = "5.0.1"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
colored = "2.1.0"
once_cell = "1.19.0"
regex = "1.10.4"
